<resources>
    <string name="app_name">WaxdFCMB</string>
    <string name="empowering_farmers_through_the_use_of_technology">Empowering <font color="#05A134">farmers</font> through the use of technology</string>
    <string name="get_started">Get started</string>
    <string name="powered_by">Powered by:</string>
    <string name="fcmb_agent_login">FCMB Agent Login</string>
    <string name="login">Login</string>
    <string name="search_by_bvn_or_name">Search by BVN or name...</string>
    <string name="search_user">Search User</string>
    <string name="list_of_farmers">List of Farmers</string>
    <string name="add_farmer">Add Farmer</string>
    <string name="create_a_loan">Create a Loan</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="yes">Yes</string>
    <string name="does_the_farmer_have_bvn">Does the Farmer have BVN?</string>
    <string name="no">No</string>
    <string name="enter_bvn_number">Enter BVN Number</string>
    <string name="bvn_number">BVN Number</string>
    <string name="add_new_farmer">Add New Farmer</string>
    <string name="update_farmer">Update Farmer</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="address">Address</string>
    <string name="personal_information">Personal Information</string>
    <string name="biometric_capture">Biometric Capture</string>
    <string name="capture_fingerprint">Capture Fingerprint</string>
    <string name="farm_location">Farm Location</string>
    <string name="capture_farm_location">Capture Farm Location</string>
    <string name="cancel">Cancel</string>
    <string name="create_farmer_profile">Create Farmer</string>
    <string name="create_loan_application">Create Loan Application</string>
    <string name="farmer_information">Farmer Information</string>
    <string name="farmers_name">Farmers Name</string>
    <string name="loan_details">Loan Details</string>
    <string name="select_loan_type">Select Loan Type</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="loan_terms">Loan Terms</string>
    <string name="annual_income">Annual Income</string>
    <string name="farm_details">Farm Details</string>
    <string name="capture_farm_coordinates">Capture Farm Coordinates</string>
    <string name="map_view">Map View</string>
    <string name="total_area">Total Area:</string>
    <string name="supporting_documents">Supporting Documents</string>
    <string name="upload_land_documents">Upload Land Documents</string>
    <string name="upload_id_proof">Upload ID Proof</string>
    <string name="submit_application">Submit Application</string>
    <string name="filter">Filter</string>
    <string name="capture_photo">Capture Farm Photo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="fcmb_agent_registration">FCMB Agent Registration</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="nin_number">NIN Number</string>
    <string name="finish_capture">Finish Capture</string>
    <string name="re_capture">Re-Capture</string>
    <string name="fcmb_update_agent">FCMB Update Agent</string>
    <string name="does_the_farmer_have_nin_number">Does the Farmer have NIN Number?</string>
    <string name="enter_nin_number">Enter NIN Number</string>
    <string name="farmer_details">Farmer Details</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="edit_farmer">Edit Farmer</string>
    <string name="okay">Okay</string>
    <string name="farm_photos">Farm Photos</string>
    <string name="done">Done</string>
    <string name="update_farm_location">Update Farm Location</string>
    <string name="welcome_agent">Welcome, Agent</string>
    <string name="update_fingerprint">Update Fingerprint</string>
    <string name="farmer_biometrics">Farmer Biometrics</string>
    <string name="bvn_registration">BVN Registration</string>
    <string name="don_t_have_an_account_yet_ncreate_an_account">Don’t have an account yet?\n<u>Create an account</u></string>
    <string name="edit_profile">Edit Profile</string>
    <string name="finger_prints_are_updated_for_this_user">Finger prints are updated for this user.</string>
    <string name="wallet_number">Wallet Number</string>
    <string name="loan_information">Loan Information</string>
    <string name="loan_application_number">Loan Application No.</string>
    <string name="loan_applications">Loan Applications</string>
    <string name="withdraw_loan_amount">Withdraw Loan Amount</string>
    <string name="transfer_loan_amount">Transfer Loan Amount</string>
    <string name="farmer_name">Farmer Name</string>
    <string name="sync_now">Sync Now</string>
</resources>