<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewClickHandler"
            type="com.waxd.pos.fcmb.utils.handlers.ViewClickHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.fragments.capture_location.CaptureLocationFragment">


        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/viewMap"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintBottom_toTopOf="@id/barrier3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:maxLines="1"
            android:paddingStart="@dimen/_1sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_1sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@id/tvCaptureFarmCoordinates"
            app:layout_constraintEnd_toStartOf="@id/ivInfo"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivInfo"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:onClick="@{viewClickHandler::onClick}"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_info"
            app:layout_constraintBottom_toBottomOf="@id/tvMessage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvMessage" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCaptureFarmCoordinates"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/bg_edit_text"
            android:backgroundTint="#CFD332"
            android:gravity="center"
            android:onClick="@{viewClickHandler::onClick}"
            android:padding="@dimen/_10sdp"
            android:text="@string/capture_farm_coordinates"
            android:textColor="@color/forestGreen"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/barrier4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFinishCapture"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/bg_edit_text"
            android:backgroundTint="#CFD332"
            android:gravity="center"
            android:onClick="@{viewClickHandler::onClick}"
            android:padding="@dimen/_10sdp"
            android:text="@string/finish_capture"
            android:textColor="#24781F"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRecapture"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/bg_edit_text"
            android:backgroundTint="#CFD332"
            android:gravity="center"
            android:onClick="@{viewClickHandler::onClick}"
            android:padding="@dimen/_10sdp"
            android:text="@string/re_capture"
            android:textColor="#24781F"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/tvDone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/bg_edit_text"
            android:backgroundTint="#CFD332"
            android:gravity="center"
            android:onClick="@{viewClickHandler::onClick}"
            android:padding="@dimen/_10sdp"
            android:text="@string/done"
            android:textColor="#24781F"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_ids="tvCaptureFarmCoordinates,tvFinishCapture,tvRecapture,tvMessage" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_ids="tvFinishCapture,tvRecapture" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>